--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script type="text/javascript" color="60,50,55" opacity='0.8' zIndex="-2" count="99" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script> -->
   </body>
 </html>
